fixed utility for creating files using bem methodologies

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -390,3 +390,6 @@
 @import '../Common.blocks/color-example/color-example';
 @import '../Common.blocks/inner-title/inner-title';
 @import '../Common.blocks/container/container';
+@import '../Common.blocks/font-example/font-example';
+@import '../Common.blocks/font-example/font-example';
+@import '../Common.blocks/font-example/font-example';
