--- a/tags.pug
+++ b/tags.pug
@@ -21,9 +21,9 @@ body
                 +container__layout-fonts
 
                     +font-example
-                        +font-example_tag-name
+                        +font-example__tag-name
                             +body-text({font: 'large', color: 'dark-shade25'}) H1
-                        +font-example_name
+                        +font-example__name
                             +widget-title This one is the sub-section or widget title
 
                     +font-example
