--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,3 +1,4 @@
+include ../Common.blocks/font-example/font-example.pug
 //include ../Common.blocks/inner-title/inner-title.pug
 include ../Common.blocks/color-example/color-example.pug
 include ../Common.blocks/uikit-logo/uikit-logo.pug
@@ -26,7 +27,6 @@ html
                 +container__layout-examples
 
                     +container__layout-colors
-
                         -let colorsExampleArr = [['dark-100','Dark Shade 100%', '#1F2041'],
                         -                        ['dark-75', 'Dark Shade 75%', '#1F2041'],
                         -                        ['dark-50', 'Dark Shade 50%', '#1F2041'],
@@ -37,5 +37,7 @@ html
                         each val, key in colorsExampleArr
                             +color-example({font: 'bold', text: 'green'},{theme: val[0], colorName: val[1], hexColor: val[2]})
 
-
                     +container__layout-fonts
+
+                        +font-example
+
