--- a/Common.blocks/font-example/__name/font-example__name.scss
+++ b/Common.blocks/font-example/__name/font-example__name.scss
@@ -1,55 +1,52 @@
-.font-example {
+.font-example__name {
 
 }
 
 @media only screen and (min-width: 321px) {
-  .font-example {
+  .font-example__name {
 
   }
 }
 
 @media only screen and (min-width: 576px) {
-  .font-example {
+  .font-example__name {
 
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .font-example {
+  .font-example__name {
 
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .font-example {
+  .font-example__name {
 
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .font-example {
+  .font-example__name {
 
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .font-example {
+  .font-example__name {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .font-example {
+  .font-example__name {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .font-example {
+  .font-example__name {
 
   }
 }
 
-
-@import './__tag-name/font-example__tag-name';
-@import './__name/font-example__name';
