--- a/Common.blocks/text-field/text-field.scss
+++ b/Common.blocks/text-field/text-field.scss
@@ -1,55 +1,55 @@
-.font-example {
+.text-field {
 
 }
 
 @media only screen and (min-width: 321px) {
-  .font-example {
+  .text-field {
 
   }
 }
 
 @media only screen and (min-width: 576px) {
-  .font-example {
+  .text-field {
 
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .font-example {
+  .text-field {
 
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .font-example {
+  .text-field {
 
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .font-example {
+  .text-field {
 
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .font-example {
+  .text-field {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .font-example {
+  .text-field {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .font-example {
+  .text-field {
 
   }
 }
 
 
-@import './__tag-name/font-example__tag-name';
-@import './__name/font-example__name';
+@import './__header/text-field__header';
+@import './__input/text-field__input';
