--- a/Common.blocks/font-example/__name/font-example__name.pug
+++ b/Common.blocks/font-example/__name/font-example__name.pug
@@ -1,10 +1,10 @@
-mixin widget-title(modifiers, ...argsArr)
+mixin font-example__name(modifiers, ...argsArr)
     -let modifierNames = '';
     -let args = (argsArr[0] !== undefined) ? argsArr[0] : {};
     -if (args.tag === undefined) args.tag = 'div';
     -if (modifiers === undefined) modifiers = '';
         each val, key in modifiers
-            -if (val !== undefined) modifierNames += 'widget-title_' + key + '_' + val + ' ';
-    #{args.tag}.widget-title&attributes(attributes)(class=modifierNames)
+            -if (val !== undefined) modifierNames += 'font-example__name_' + key + '_' + val + ' ';
+    #{args.tag}.font-example__name&attributes(attributes)(class=modifierNames)
         if block
             block
