--- a/Common.blocks/form-elements/__left-col/form-elements__left-col.scss
+++ b/Common.blocks/form-elements/__left-col/form-elements__left-col.scss
@@ -1,55 +1,52 @@
-.font-example {
+.form-elements__left-col {
 
 }
 
 @media only screen and (min-width: 321px) {
-  .font-example {
+  .form-elements__left-col {
 
   }
 }
 
 @media only screen and (min-width: 576px) {
-  .font-example {
+  .form-elements__left-col {
 
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .font-example {
+  .form-elements__left-col {
 
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .font-example {
+  .form-elements__left-col {
 
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .font-example {
+  .form-elements__left-col {
 
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .font-example {
+  .form-elements__left-col {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .font-example {
+  .form-elements__left-col {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .font-example {
+  .form-elements__left-col {
 
   }
 }
 
-
-@import './__tag-name/font-example__tag-name';
-@import './__name/font-example__name';
