--- a/Common.blocks/text-field/__header/text-field__header.pug
+++ b/Common.blocks/text-field/__header/text-field__header.pug
@@ -1,10 +1,10 @@
-mixin widget-title(modifiers, ...argsArr)
+mixin text-field__header(modifiers, ...argsArr)
     -let modifierNames = '';
     -let args = (argsArr[0] !== undefined) ? argsArr[0] : {};
     -if (args.tag === undefined) args.tag = 'div';
     -if (modifiers === undefined) modifiers = '';
         each val, key in modifiers
-            -if (val !== undefined) modifierNames += 'widget-title_' + key + '_' + val + ' ';
-    #{args.tag}.widget-title&attributes(attributes)(class=modifierNames)
+            -if (val !== undefined) modifierNames += 'text-field__header_' + key + '_' + val + ' ';
+    #{args.tag}.text-field__header&attributes(attributes)(class=modifierNames)
         if block
             block
