--- a/Common.blocks/widget-title/widget-title.scss
+++ b/Common.blocks/widget-title/widget-title.scss
@@ -1,10 +1,5 @@
 .widget-title {
-  font-family: Quicksand, 'Open Sans';
-  font-weight: bold;
-  font-size: 1.118rem;
-  line-height: 1.26em;
-  color: $DarkShade100;
-  margin: 0;
+
 }
 
 @media only screen and (min-width: 321px) {
@@ -38,6 +33,12 @@
 }
 
 @media only screen and (min-width: 1440px) {
+  .widget-title {
+
+  }
+}
+
+@media only screen and (min-width: 1681px) {
   .widget-title {
 
   }
