--- a/tags.pug
+++ b/tags.pug
@@ -76,7 +76,8 @@ body
                                 +text-field__header
                                     +label-text dropdown
                                     +label-text({color: 'dark-shade50', font: 'light', text: 'uppercase'}) default
-                                +dropdown-guests
+                                +text-field__input
+                                    +dropdown-guests
 
                         +form-elements__component-wrapper
                             +text-field
