--- a/pages/index.pug
+++ b/pages/index.pug
@@ -62,5 +62,9 @@ html
                         +form-elements__corrective-wrapper
 
                             +form-elements__component-wrapper({theme: 'text-field'})
-
-+text-field
+                                -let componentTextFieldContent = [['H1','This one is the sub-section or widget title'],
+                                -                   ['H2', 'Next one is the item title inside widgets'],
+                                -                   ['H3', 'This is a label or CTA text'],
+                                -                   ['Body', 'This is the body text which is used for most of the design, like paragraphs, lists, etc.']];
+                                each val, key in componentTextFieldContent
+                                    +text-field({},{fieldType: val[0], fieldState: val[1]})
