--- a/Common.blocks/filter-datepicker/filter-datepicker.pug
+++ b/Common.blocks/filter-datepicker/filter-datepicker.pug
@@ -15,7 +15,7 @@ mixin filter-datepicker(modifiers, ...argsArr)
         +filter-datepicker__dropdown
             +filter-datepicker__input-hidden(type='hidden')
             +filter-datepicker__open 19 авг - 23 авг
-            +filter-datepicker__icon({},{tag: args.iconTag, iconClass: args.iconClass, iconContent: args.iconContent})
+            +filter-datepicker__icon({},{iconTag: args.iconTag, iconClass: args.iconClass, iconContent: args.iconContent})
         +filter-datepicker__air-datepicker
         if block
             block
