--- a/pages/index.pug
+++ b/pages/index.pug
@@ -86,9 +86,9 @@ html
 
 
                             +form-elements__component-wrapper({theme: 'datepicker'})
-                                +dropdown-datepicker
+                                +dropdown-datepicker({}, {iconTag: 'i', iconClass: 'material-icons', iconContent: 'expand_more'})
 
 
                             +form-elements__component-wrapper({theme: 'filter-datepicker'})
                                 +text-field({},{fieldType: 'filter date dropdown'})
-                                    +filter-datepicker({}, {iconTag: 'i', iconClass: 'material-icons', iconContent: 'expand_more'})
+                                    +filter-datepicker
