--- a/Common.blocks/dropdown-datepicker/__icon/dropdown-datepicker__icon.pug
+++ b/Common.blocks/dropdown-datepicker/__icon/dropdown-datepicker__icon.pug
@@ -7,5 +7,7 @@ mixin dropdown-datepicker__icon(modifiers, ...argsArr)
         each val, key in modifiers
             -if (val !== undefined) modifierNames += 'dropdown-datepicker__icon_' + key + '_' + val + ' ';
     #{args.tag}.dropdown-datepicker__icon&attributes(attributes)(class=modifierNames)
+        if (args.iconTag !== undefined)
+            #{args.iconTag}(class=args.iconClass) #{args.iconContent}
         if block
             block
