--- a/Common.blocks/dropdown-datepicker/dropdown-datepicker.pug
+++ b/Common.blocks/dropdown-datepicker/dropdown-datepicker.pug
@@ -21,8 +21,7 @@ mixin dropdown-datepicker(modifiers, ...argsArr)
             +dropdown-datepicker__arrival-date
                 +dropdown-datepicker__input-hidden(type="hidden")
                 +dropdown-datepicker__open ДД.ММ.ГГГГ
-                +dropdown-datepicker__icon
-                    i.material-icons expand_more
+                +dropdown-datepicker__icon({},{iconTag: args.iconTag, iconClass: args.iconClass, iconContent: args.iconContent})
             +dropdown-datepicker__air-datepicker
         +dropdown-datepicker__wrapper-dropdown
             +dropdown-datepicker__header
@@ -30,7 +29,6 @@ mixin dropdown-datepicker(modifiers, ...argsArr)
             +dropdown-datepicker__date-departure
                 +dropdown-datepicker__input-hidden(type="hidden")
                 +dropdown-datepicker__open 19.08.2019
-                +dropdown-datepicker__icon
-                    i.material-icons expand_more
+                +dropdown-datepicker__icon({},{iconTag: args.iconTag, iconClass: args.iconClass, iconContent: args.iconContent})
         if block
             block
