--- a/pages/index.scss
+++ b/pages/index.scss
@@ -400,3 +400,4 @@
 @import '../Common.blocks/dropdown-guests/dropdown-guests';
 @import '../Common.blocks/dropdown-datepicker/dropdown-datepicker';
 @import '../Common.blocks/filter-datepicker/filter-datepicker';
+@import '../Common.blocks/subscr-field/subscr-field';
