--- a/pages/index.scss
+++ b/pages/index.scss
@@ -401,3 +401,4 @@
 @import '../Common.blocks/dropdown-datepicker/dropdown-datepicker';
 @import '../Common.blocks/filter-datepicker/filter-datepicker';
 @import '../Common.blocks/subscr-field/subscr-field';
+@import '../Common.blocks/dropdown-facilities/dropdown-facilities';
