--- a/tags.pug
+++ b/tags.pug
@@ -129,7 +129,7 @@ body
                                     +subscr-field__icon('arrow_forward')
 
                     +form-elements__component-wrapper({theme: 'dropdown-facilities'})
-                        +DropdownFacilities(multiple='multiple', id="dropdownFacilities", name='dropdownFacilities', size='3' data-option-value=['bedrooms', 'beds', 'bathrooms'] data-option-content=['спальни', 'кровати', 'ванные комнаты'] data-option-declension=[['спален', 'спальня', 'спальни'],['кроватей', 'кровать', 'кровати'],['ванных комнат', 'ванная комната', 'ванные комнаты']])
+                        +DropdownFacilities
 
                     +form-elements__component-wrapper({theme: 'facilities-expanded'})
                         +DropdownFacilities(multiple='multiple', id="dropdownFacilitiesExpanded", name='dropdownFacilities', size='3' data-option-value=['bedrooms', 'beds', 'bathrooms'] data-option-content=['спальни', 'кровати', 'ванные комнаты'] data-option-declension=[['спален', 'спальня', 'спальни'], ['кроватей', 'кровать', 'кровати'], ['ванных комнат', 'ванная комната', 'ванные комнаты']])
