--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,3 +1,4 @@
+include ../Common.blocks/checkbox-list/checkbox-list.pug
 include ../Common.blocks/dropdown-facilities/dropdown-facilities.pug
 include ../Common.blocks/subscr-field/subscr-field.pug
 include ../Common.blocks/filter-datepicker/filter-datepicker.pug
@@ -112,6 +113,4 @@ html
 
 
                         +form-elements__component-wrapper({theme: 'expandable-list'})
-
-
-
+                            +checkbox-list({}, {checkboxListTitle: 'expandable checkbox list', iconTag: 'i', iconClass: 'material-icons', iconContent: 'expand_more'})
