--- a/pages/index.scss
+++ b/pages/index.scss
@@ -402,3 +402,4 @@
 @import '../Common.blocks/filter-datepicker/filter-datepicker';
 @import '../Common.blocks/subscr-field/subscr-field';
 @import '../Common.blocks/dropdown-facilities/dropdown-facilities';
+@import '../Common.blocks/checkbox-list/checkbox-list';
