--- a/Common.blocks/Checkbox/Checkbox.scss
+++ b/Common.blocks/Checkbox/Checkbox.scss
@@ -1,52 +1,51 @@
-@media only screen and (max-width: 576px) {
-  .Checkbox {
+.checkbox {
+
+}
+
+@media only screen and (min-width: 321px) {
+  .checkbox {
 
   }
 }
 
-@media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Checkbox {
+@media only screen and (min-width: 576px) {
+  .checkbox {
 
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Checkbox {
+@media only screen and (min-width: 768px) {
+  .checkbox {
 
   }
 }
 
-@media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Checkbox {
+@media only screen and (min-width: 992px) {
+  .checkbox {
 
   }
 }
 
-@media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Checkbox {
-    -webkit-appearance: none;
-    width: 20px;
-    height: 20px;
-    position: relative;
-    background: $background;
-    /* Dark 25% */
-    border: 1px solid $DatepickerArrowColor;
-    box-sizing: border-box;
-    border-radius: 4px;
-    margin: 0;
-    flex-shrink: 0;
-    align-self: start;
-  }
-}
-
-@media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Checkbox {
+@media only screen and (min-width: 1200px) {
+  .checkbox {
 
   }
 }
 
-@media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Checkbox {
+@media only screen and (min-width: 1440px) {
+  .checkbox {
+
+  }
+}
+
+@media only screen and (min-width: 1681px) {
+  .checkbox {
+
+  }
+}
+
+@media only screen and (min-width: 1681px) {
+  .checkbox {
 
   }
 }
