--- a/Common.blocks/List/__content/list__content.scss
+++ b/Common.blocks/List/__content/list__content.scss
@@ -1,55 +1,52 @@
-.list {
+.list__content {
 
 }
 
 @media only screen and (min-width: 321px) {
-  .list {
+  .list__content {
 
   }
 }
 
 @media only screen and (min-width: 576px) {
-  .list {
+  .list__content {
 
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .list {
+  .list__content {
 
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .list {
+  .list__content {
 
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .list {
+  .list__content {
 
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .list {
+  .list__content {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .list {
+  .list__content {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .list {
+  .list__content {
 
   }
 }
 
-
-@import './__item/list__item';
-@import './__content/list__content';
