--- a/pages/index.scss
+++ b/pages/index.scss
@@ -403,3 +403,5 @@
 @import '../Common.blocks/subscr-field/subscr-field';
 @import '../Common.blocks/dropdown-facilities/dropdown-facilities';
 @import '../Common.blocks/checkbox-list/checkbox-list';
+@import '../Common.blocks/list/list';
+@import '../Common.blocks/checkbox/checkbox';
