--- a/Common.blocks/List/List.pug
+++ b/Common.blocks/List/List.pug
@@ -4,7 +4,7 @@ include ./__item/list__item.pug
 mixin list(modifiers, ...argsArr)
     -let modifierNames = '';
     -let args = (argsArr[0] !== undefined) ? argsArr[0] : {};
-    -if (args.tag === undefined) args.tag = 'div';
+    -if (args.tag === undefined) args.tag = 'ul';
     -if (modifiers === undefined) modifiers = '';
         each val, key in modifiers
             -if (val !== undefined) modifierNames += 'list_' + key + '_' + val + ' ';
