--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,4 +1,4 @@
-include ../Common.blocks/checkbox/checkbox.pug
+//include ../Common.blocks/checkbox/checkbox.pug
 include ../Common.blocks/list/list.pug
 include ../Common.blocks/checkbox-list/checkbox-list.pug
 include ../Common.blocks/dropdown-facilities/dropdown-facilities.pug
