--- a/Common.blocks/List/List.pug
+++ b/Common.blocks/List/List.pug
@@ -1,5 +1,6 @@
 include ./__content/list__content.pug
 include ./__item/list__item.pug
+include ../checkbox/checkbox.pug
 
 mixin list(modifiers, ...argsArr)
     -let modifierNames = '';
