--- a/Common.blocks/checkbox/checkbox.pug
+++ b/Common.blocks/checkbox/checkbox.pug
@@ -1,11 +1,8 @@
-
 mixin checkbox(modifiers, ...argsArr)
     -let modifierNames = '';
     -let args = (argsArr[0] !== undefined) ? argsArr[0] : {};
-    -if (args.tag === undefined) args.tag = 'div';
+    -if (args.tag === undefined) args.tag = 'input';
     -if (modifiers === undefined) modifiers = '';
         each val, key in modifiers
             -if (val !== undefined) modifierNames += 'checkbox_' + key + '_' + val + ' ';
     #{args.tag}.checkbox&attributes(attributes)(class=modifierNames)
-        if block
-            block
