--- a/pages/index.scss
+++ b/pages/index.scss
@@ -405,3 +405,5 @@
 @import '../Common.blocks/checkbox-list/checkbox-list';
 @import '../Common.blocks/list/list';
 @import '../Common.blocks/checkbox/checkbox';
+@import '../Common.blocks/checkbox/checkbox';
+@import '../Common.blocks/checkbox/checkbox';
